--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,7 @@
-
 PASOS
 
 * LINUX	
   # apt-get install python-qt4 python-setuptools
-  #  
+  tar -zxvf Qtumblr-0.1.tar.gz
+  cd Qtumblr-0.1
+  #python setup.py install
