Adding Meta Stuff

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 Alejandro Villanueva
-admin@ialex.org
+admin at ialex.org
 http://ialex.org
 
 Jair Gaxiola
-jyr.gaxiola@gmail.com
+jyr.gaxiola at gmail.com
 http://jyr.tumbrl.com
