--- a/README
+++ b/README
@@ -1,11 +1,18 @@
-EL PROYECTO ES ACTUALMENTE USABLE SALVO ALGUNOS PROBLEMAS QUE TENGO QUE RESOLVER CON EL SETUP.PY
-YA QUE NO HE PODIDO HACER QUE FUNCIONE A LA PERFECCION CON EASY_SETUP PERO SI CLONAN EL REPOSITORIO
-O DESCARGAN EL TAR CON "PYTHON SETUP.PY INSTALL" DEBEN TENER FUNCIONANDO LA APLICACION EN LINUX
-LOS REQUERIMIENTOS SON:
+OpenTumblr-Qt
+	Tumblr client based on Opentumblr  
+ 
+REQUIREMENTS
+	poster ( http://pypi.python.org/pypi/poster/0.4 )
+	simplejson ( http://code.google.com/p/simplejson/ )
+	python-qt4 ( PyQt4 )
+	python
+ 
+DEVELOPERS
+	Alejandro Villanueva a.k.a iAlex
+	Jair Gaxiola a.k.a jyr
 
-PYTHON-QT4
-PYTHON-SETUPTOOLS
+BLOG
+	http://blog.opentumblr.com
 
-EL SETUP.PY SE ENCARGA DE INSTALAR AUTOMATICAMENTE POSTER Y SIMPLEJSON POR USTEDES CHEERS
-CUALQUIER HACK ES BIENVENIDO.
-
+IRC	
+	irc.freenode.net (#opentumblr)
