--- a/THANKS
+++ b/THANKS
@@ -1,3 +1,3 @@
 Ryan Cox - http://code.google.com/p/python-tumblr/
 Ziked - http://www.ziked.com/
-Jyr - http://www.opentumblr.com
+Jair Gaxiola - http://jyr.tumblr.com
